--- a/README.adoc
+++ b/README.adoc
@@ -1,9 +1,7 @@
 ---
 tags: [spring-cloud, eureka]
-projects: [spring-cloud]
+projects: [spring-cloud, spring-cloud-netflix]
 ---
-:spring_boot_version: 1.2.8.RELEASE
-:DataSource:
 :toc:
 :icons: font
 :source-highlighter: prettify
