--- a/README.adoc
+++ b/README.adoc
@@ -81,13 +81,13 @@ You can find additional information about configuring the Eureka Server https://
 By default, the registry also tries to register itself, so you need to disable that
 behavior. Additionally, it is a good convention to put this registry on a separate port when using it locally.
 
-Add some properties to `eureka-server/src/main/resources/application.properties` to
+Add some properties to `eureka-server/src/main/resources/application.yml` to
 handle these requirements, as the following listing shows:
 
 ====
-[source,properties]
+[source,yml]
 ----
-include::eureka-server/src/main/resources/application.properties[]
+include::eureka-server/src/main/resources/application.yml[]
 ----
 ====
 
@@ -100,17 +100,17 @@ To avoid port conflicts, set the `server.port` parameter in both ServiceA and Se
 
 Service A:
 ====
-[source,properties]
+[source,yml]
 ----
-include::servicea/src/main/resources/application.properties[]
+include::servicea/src/main/resources/application.yml[]
 ----
 ====
 
 Service B:
 ====
-[source,properties]
+[source,yml]
 ----
-include::serviceb/src/main/resources/application.properties[]
+include::serviceb/src/main/resources/application.yml[]
 ----
 ====
 
@@ -143,7 +143,7 @@ include::serviceb/src/main/java/com/example/serviceb/controller/ServiceBRestCont
 ----
 ====
 
-This class uses a `DiscoveryClient` to find the `ServiceInstance` of `servicea` based only on the application name.
+This class uses a `DiscoveryClient` to find the `serviceId` of `servicea` based only on the application name.
 This guide has only one instance of `servicea`, so we can look only at the first instance.
 This is seen in the following line:
 
